apps/heimdall/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: heimdall
  strategy:
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: heimdall
        persistentVolumeClaim:
          claimName: heimdall-pvc
      containers:
      - image: ghcr.io/linuxserver/heimdall:2.5.6
        name: heimdall
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 80
           name: http-80
           protocol: TCP
        volumeMounts:
         - mountPath: /config
           name: heimdall
           subPath: config
